# Midway

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: distribution.md
scripts/: check-budgets.mjs
scripts/release/: generate-checksums.mjs  generate-updater-json.mjs  render-tauri-config.mjs  run-generate-updater-json.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.beta.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.release.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/app/: errors.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: auth.rs  http.rs  interop.rs  interpolation.rs  mod.rs  preview.rs  runner.rs  secrets.rs  testing.rs  workspace.rs
src-tauri/src/infra/: http_reqwest.rs  mod.rs  secret_store.rs  sqlite_repository.rs
src-tauri/src/runtime/: mod.rs  request_executor.rs  secret_executor.rs
src/components/: AppErrorBoundary.tsx  CodeEditor.tsx  UpdateCenterCard.tsx
src/lib/: commandPalette.ts  curl.ts  diagnostics.ts  requestExport.ts  updater.ts
src/tauri/: api.ts  types.ts
tests/: qa.test.mjs  release.test.mjs
tests/ui/: app-critical-flows.test.tsx  setup.ts  update-center.test.tsx
