[package]
name = "midway"
version = "0.1.0"
description = "Rust-centric desktop API client with Tauri, SQLite and OS secrets"
authors = ["BardVivaldelli"]
edition = "2021"

[lib]
name = "midway_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = "0.7"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

tauri-plugin-process = "2"
tauri-plugin-updater = "2"
